label css update

--- a/snapchat/test.html
+++ b/snapchat/test.html
@@ -11,8 +11,8 @@
 
   <div class="login-container">
     <img src="img/snapchat-app-icon.svg" alt="Snapchat Logo" class="logo-img">
-    <h1>Log in to Snapchat</h1>
-    <p>We cannot find an account for this email address.</p>
+    <h1 class="">Log in to Snapchat</h1>
+    <!-- <p>We cannot find an account for this email address.</p> -->
     <form>
       <label>Username or Email</label>
       <input type="email">
