language select added

--- a/snapchat/test.html
+++ b/snapchat/test.html
@@ -35,10 +35,49 @@
         </ul>
         <div class="language-selector">
           <h4>Language</h4>
-          <select>
-            <option>English (US)</option>
-            <option>Spanish</option>
-            <option>French</option>
+          <select id="sc-global-locale-selector" style="appearance: none; border: 1px solid rgb(204, 204, 204); border-radius: 5px; background: white; width: 100%; margin-top: 10px; padding: 5px 10px; font-size: 14px; font-family: inherit; color: rgba(0, 0, 0, 0.6); height: 34px; cursor: pointer;">
+            <option value="ar">العَرَبِية</option>
+            <option value="bn-BD">বাংলা(বাংলাদেশ)</option>
+            <option value="bn-IN">বাংলা (ভারত)</option>
+            <option value="da-DK">Dansk</option>
+            <option value="de-DE">Deutsch</option>
+            <option value="el-GR">Ελληνικά</option>
+            <option value="en-GB">English (UK)</option>
+            <option value="en-US">English (US)</option>
+            <option value="es">Español</option>
+            <option value="es-AR">Español (Argentine)</option>
+            <option value="es-ES">Español (España)</option>
+            <option value="es-MX">Español (México)</option>
+            <option value="fi-FI">Suomi</option>
+            <option value="fil-PH">Filipino</option>
+            <option value="fr-FR">Français</option>
+            <option value="gu-IN">ગુજરાતી</option>
+            <option value="hi-IN">हिंदी</option>
+            <option value="id-ID">Bahasa Indonesia</option>
+            <option value="it-IT">Italiano</option>
+            <option value="ja-JP">日本語</option>
+            <option value="kn-IN">ಕನ್ನಡ (India)</option>
+            <option value="ko-KR">한국어</option>
+            <option value="ml-IN">മലയാളം</option>
+            <option value="mr-IN">मराठी</option>
+            <option value="ms-MY">Bahasa Melayu</option>
+            <option value="nb-NO">Norsk</option>
+            <option value="nl-NL">Nederlands</option>
+            <option value="pa">ਪੰਜਾਬੀ</option>
+            <option value="pl-PL">Polski</option>
+            <option value="pt-BR">Português (Brasil)</option>
+            <option value="pt-PT">Português (Portugal)</option>
+            <option value="ro-RO">Română</option>
+            <option value="ru-RU">Русский</option>
+            <option value="sv-SE">Svenska</option>
+            <option value="ta-IN">தமிழ்</option>
+            <option value="te-IN">తెలుగు</option>
+            <option value="th-TH">ภาษาไทย (ประเทศไทย)</option>
+            <option value="tr-TR">Türkçe</option>
+            <option value="ur-PK">اردو</option>
+            <option value="vi-VN">Tiếng Việt</option>
+            <option value="zh-Hans">中文（简体）</option>
+            <option value="zh-Hant">中文（繁體）</option>
           </select>
         </div>
       </div>
@@ -89,7 +128,12 @@
       </div>
   
       <div class="section">
-        <button class="toggle-button">Community</button>
+        <div class="toggle-button">
+          <div class="footer-arrow">
+            <svg width="15" height="20" fill="rgba(0,0,0,.87)"><g><rect stroke="rgba(0,0,0,.87)" transform="rotate(45 0,0)" rx="1" id="1" height="1.5" width="10" y="-2" x="5" stroke-width="1"></rect><rect stroke="rgba(0,0,0,.87)" transform="rotate(-45 0,0)" rx="1" id="2" height="1.5" width="10" y="13.5" x="-8" stroke-width="1"></rect></g></svg>
+          </div>
+          <div class="footer-column-header">Community</div>
+        </div>
         <ul class="items">
           <li><a href="#">Support</a></li>
           <li><a href="#">Community Guidelines</a></li>
@@ -98,7 +142,12 @@
       </div>
   
       <div class="section">
-        <button class="toggle-button">Advertising</button>
+        <div class="toggle-button">
+          <div class="footer-arrow">
+            <svg width="15" height="20" fill="rgba(0,0,0,.87)"><g><rect stroke="rgba(0,0,0,.87)" transform="rotate(45 0,0)" rx="1" id="1" height="1.5" width="10" y="-2" x="5" stroke-width="1"></rect><rect stroke="rgba(0,0,0,.87)" transform="rotate(-45 0,0)" rx="1" id="2" height="1.5" width="10" y="13.5" x="-8" stroke-width="1"></rect></g></svg>
+          </div>
+          <div class="footer-column-header">Advertising</div>
+        </div>
         <ul class="items">
           <li><a href="#">Buy Ads</a></li>
           <li><a href="#">Advertising Policies</a></li>
@@ -109,7 +158,12 @@
       </div>
   
       <div class="section">
-        <button class="toggle-button">Legal</button>
+        <div class="toggle-button">
+          <div class="footer-arrow">
+            <svg width="15" height="20" fill="rgba(0,0,0,.87)"><g><rect stroke="rgba(0,0,0,.87)" transform="rotate(45 0,0)" rx="1" id="1" height="1.5" width="10" y="-2" x="5" stroke-width="1"></rect><rect stroke="rgba(0,0,0,.87)" transform="rotate(-45 0,0)" rx="1" id="2" height="1.5" width="10" y="13.5" x="-8" stroke-width="1"></rect></g></svg>
+          </div>
+          <div class="footer-column-header">Legal</div>
+        </div>
         <ul class="items">
           <li><a href="#">Privacy Center</a></li>
           <li><a href="#">Your Privacy Choices</a></li>
